--- a/AccelerometerAnalysisParkinsonsCannabidiol/Scripts/4-Classification.ipynb
+++ b/AccelerometerAnalysisParkinsonsCannabidiol/Scripts/4-Classification.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,33 +166,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "AUC: 0.518758064516129\n",
-      "Score: 0.518758064516129\n",
-      "Sensibilidade: 0.5169677419354839\n",
-      "Especificidade: 0.5205483870967742 \n",
+      "AUC: 0.517\n",
+      "Score: 0.517\n",
+      "Sensibilidade: 0.5176129032258063\n",
+      "Especificidade: 0.5163870967741937 \n",
       "\n",
-      "person_12    0.047304\n",
-      "person_11    0.046921\n",
-      "person_4     0.046634\n",
-      "person_21    0.046538\n",
-      "person_10    0.046347\n",
-      "person_8     0.046347\n",
-      "person_18    0.046347\n",
-      "person_16    0.046155\n",
-      "person_7     0.046155\n",
-      "person_20    0.045964\n",
-      "person_13    0.045964\n",
-      "person_17    0.045868\n",
-      "person_5     0.045772\n",
-      "person_19    0.045293\n",
-      "person_2     0.045293\n",
-      "person_0     0.045293\n",
-      "person_14    0.044815\n",
-      "person_1     0.044719\n",
-      "person_15    0.044240\n",
-      "person_3     0.043857\n",
-      "person_9     0.042133\n",
-      "person_6     0.042038\n",
+      "person_21    0.047114\n",
+      "person_11    0.047018\n",
+      "person_4     0.046827\n",
+      "person_8     0.046732\n",
+      "person_0     0.046636\n",
+      "person_12    0.046636\n",
+      "person_20    0.046541\n",
+      "person_18    0.046254\n",
+      "person_10    0.046158\n",
+      "person_16    0.046063\n",
+      "person_17    0.045967\n",
+      "person_19    0.045776\n",
+      "person_7     0.045585\n",
+      "person_5     0.045585\n",
+      "person_2     0.045298\n",
+      "person_3     0.044629\n",
+      "person_9     0.044343\n",
+      "person_13    0.044151\n",
+      "person_1     0.044151\n",
+      "person_14    0.043865\n",
+      "person_15    0.042336\n",
+      "person_6     0.042336\n",
       "dtype: float64\n"
      ]
     }
@@ -222,33 +222,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "AUC: 0.4841038961038961\n",
-      "Score: 0.4841038961038961\n",
-      "Sensibilidade: 0.48207792207792205\n",
-      "Especificidade: 0.48612987012987013 \n",
+      "AUC: 0.4828441558441558\n",
+      "Score: 0.4828441558441558\n",
+      "Sensibilidade: 0.4737662337662338\n",
+      "Especificidade: 0.4919220779220779 \n",
       "\n",
-      "person_6     0.049663\n",
-      "person_7     0.049300\n",
-      "person_2     0.048208\n",
-      "person_14    0.047844\n",
-      "person_18    0.047844\n",
-      "person_3     0.047299\n",
-      "person_21    0.046935\n",
-      "person_10    0.046571\n",
-      "person_11    0.046389\n",
-      "person_9     0.046207\n",
-      "person_4     0.045843\n",
-      "person_0     0.045661\n",
-      "person_8     0.045479\n",
-      "person_17    0.044934\n",
-      "person_5     0.044388\n",
-      "person_20    0.043842\n",
-      "person_12    0.043478\n",
-      "person_1     0.043114\n",
-      "person_15    0.042569\n",
-      "person_13    0.042205\n",
-      "person_16    0.041841\n",
-      "person_19    0.040386\n",
+      "person_17    0.051492\n",
+      "person_12    0.049491\n",
+      "person_11    0.049309\n",
+      "person_21    0.047853\n",
+      "person_8     0.047489\n",
+      "person_16    0.046397\n",
+      "person_4     0.046397\n",
+      "person_18    0.046215\n",
+      "person_6     0.045852\n",
+      "person_10    0.045488\n",
+      "person_15    0.045488\n",
+      "person_7     0.045306\n",
+      "person_3     0.044942\n",
+      "person_19    0.044942\n",
+      "person_5     0.044578\n",
+      "person_1     0.044214\n",
+      "person_14    0.043850\n",
+      "person_0     0.043304\n",
+      "person_20    0.042940\n",
+      "person_2     0.042394\n",
+      "person_9     0.041303\n",
+      "person_13    0.040757\n",
       "dtype: float64\n"
      ]
     }
@@ -282,33 +282,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "AUC: 0.4828051948051948\n",
-      "Score: 0.4828051948051948\n",
-      "Sensibilidade: 0.4775844155844155\n",
-      "Especificidade: 0.488025974025974 \n",
+      "AUC: 0.4855974025974026\n",
+      "Score: 0.4855974025974026\n",
+      "Sensibilidade: 0.47979220779220777\n",
+      "Especificidade: 0.49140259740259734 \n",
       "\n",
-      "person_16    0.048217\n",
-      "person_10    0.048035\n",
-      "person_8     0.048035\n",
-      "person_5     0.048035\n",
-      "person_20    0.046943\n",
-      "person_13    0.046579\n",
-      "person_11    0.046397\n",
-      "person_0     0.046397\n",
-      "person_2     0.046215\n",
-      "person_9     0.046033\n",
-      "person_18    0.045852\n",
-      "person_1     0.045852\n",
-      "person_17    0.045852\n",
-      "person_19    0.045670\n",
+      "person_20    0.048763\n",
+      "person_10    0.048581\n",
+      "person_4     0.048035\n",
+      "person_3     0.047853\n",
+      "person_21    0.047489\n",
+      "person_13    0.047307\n",
+      "person_14    0.047125\n",
+      "person_5     0.046761\n",
+      "person_18    0.046579\n",
+      "person_2     0.045670\n",
+      "person_0     0.045488\n",
+      "person_8     0.045306\n",
+      "person_1     0.045124\n",
       "person_7     0.045124\n",
-      "person_4     0.044942\n",
-      "person_14    0.044578\n",
-      "person_12    0.044214\n",
-      "person_21    0.043486\n",
-      "person_6     0.041667\n",
-      "person_3     0.041667\n",
-      "person_15    0.040211\n",
+      "person_15    0.044396\n",
+      "person_11    0.043850\n",
+      "person_17    0.043850\n",
+      "person_6     0.043122\n",
+      "person_16    0.042940\n",
+      "person_19    0.042576\n",
+      "person_12    0.042394\n",
+      "person_9     0.041667\n",
       "dtype: float64\n"
      ]
     }
@@ -341,33 +341,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "AUC: 0.501012987012987\n",
-      "Score: 0.501012987012987\n",
-      "Sensibilidade: 0.49955844155844153\n",
-      "Especificidade: 0.5024675324675325 \n",
+      "AUC: 0.5021168831168832\n",
+      "Score: 0.5021168831168832\n",
+      "Sensibilidade: 0.4995844155844155\n",
+      "Especificidade: 0.5046493506493506 \n",
       "\n",
-      "person_9     0.050373\n",
-      "person_7     0.048372\n",
-      "person_0     0.048191\n",
-      "person_1     0.047281\n",
-      "person_11    0.047099\n",
-      "person_16    0.046918\n",
-      "person_8     0.046554\n",
-      "person_19    0.046554\n",
-      "person_4     0.045645\n",
-      "person_21    0.045645\n",
-      "person_18    0.045463\n",
-      "person_6     0.044917\n",
-      "person_15    0.044735\n",
-      "person_12    0.044554\n",
-      "person_10    0.044554\n",
-      "person_14    0.044372\n",
-      "person_20    0.044190\n",
-      "person_2     0.044190\n",
-      "person_5     0.043644\n",
-      "person_17    0.042553\n",
-      "person_13    0.042371\n",
-      "person_3     0.041826\n",
+      "person_3     0.048745\n",
+      "person_9     0.048563\n",
+      "person_19    0.047472\n",
+      "person_11    0.047108\n",
+      "person_10    0.047108\n",
+      "person_2     0.046199\n",
+      "person_0     0.046199\n",
+      "person_8     0.045835\n",
+      "person_12    0.045653\n",
+      "person_21    0.045653\n",
+      "person_4     0.045289\n",
+      "person_5     0.045289\n",
+      "person_1     0.045107\n",
+      "person_20    0.044744\n",
+      "person_16    0.044562\n",
+      "person_15    0.044562\n",
+      "person_14    0.044562\n",
+      "person_13    0.044016\n",
+      "person_17    0.043652\n",
+      "person_18    0.043470\n",
+      "person_7     0.043107\n",
+      "person_6     0.043107\n",
       "dtype: float64\n"
      ]
     }
@@ -420,33 +420,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "AUC: 0.7476416666666666\n",
-      "Score: 0.7294545454545455\n",
-      "Sensibilidade: 0.7161269841269841\n",
-      "Especificidade: 0.7791563492063492 \n",
+      "AUC: 0.7513039682539683\n",
+      "Score: 0.733090909090909\n",
+      "Sensibilidade: 0.7125373015873016\n",
+      "Especificidade: 0.790070634920635 \n",
       "\n",
-      "person_8     0.133737\n",
-      "person_0     0.123656\n",
-      "person_15    0.088038\n",
-      "person_7     0.073253\n",
-      "person_11    0.069220\n",
-      "person_2     0.067876\n",
-      "person_17    0.064516\n",
-      "person_18    0.056452\n",
-      "person_6     0.054435\n",
-      "person_19    0.047715\n",
-      "person_9     0.040323\n",
-      "person_3     0.040323\n",
-      "person_1     0.033602\n",
-      "person_21    0.025538\n",
-      "person_16    0.022849\n",
-      "person_14    0.018145\n",
-      "person_12    0.015457\n",
-      "person_20    0.015457\n",
-      "person_5     0.002688\n",
-      "person_13    0.002688\n",
-      "person_10    0.002016\n",
-      "person_4     0.002016\n",
+      "person_8     0.149864\n",
+      "person_0     0.117847\n",
+      "person_15    0.081744\n",
+      "person_11    0.080381\n",
+      "person_7     0.079019\n",
+      "person_2     0.075613\n",
+      "person_17    0.072888\n",
+      "person_18    0.055177\n",
+      "person_6     0.053134\n",
+      "person_19    0.049046\n",
+      "person_3     0.029292\n",
+      "person_9     0.029292\n",
+      "person_21    0.027929\n",
+      "person_1     0.026567\n",
+      "person_16    0.020436\n",
+      "person_14    0.018392\n",
+      "person_12    0.016349\n",
+      "person_20    0.009537\n",
+      "person_13    0.002725\n",
+      "person_5     0.002044\n",
+      "person_4     0.002044\n",
+      "person_10    0.000681\n",
       "dtype: float64\n"
      ]
     }
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -715,7 +715,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -729,30 +729,6 @@
     "\n",
     "#Apresentação de algumas linhas\n",
     "df_parkinson.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['pse', 'pspf1', 'pspf2', 'pspf3', 'psp1', 'psp2', 'psp3', 'wpsf1',\n",
-       "       'wpsf2', 'wpsf3', 'jerk_mean', 'jerk_std', 'jerk_skew', 'jerk_kur',\n",
-       "       'RMS', 'range', 'mean', 'var', 'skew', 'kurt', 'evaluate', 'measure',\n",
-       "       'drug'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_parkinson.columns"
    ]
   },
   {
@@ -774,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -810,41 +786,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('jerk_skew', 'RMS', 'mean')\n",
-      "AUC: 0.5238441558441558\n",
-      "Score: 0.5238441558441558\n",
-      "Sensibilidade: 0.5215064935064935\n",
-      "Especificidade: 0.5261818181818181 \n",
+      "('wpsf2', 'jerk_skew', 'jerk_kur')\n",
+      "AUC: 0.5375844155844156\n",
+      "Score: 0.5375844155844155\n",
+      "Sensibilidade: 0.5271168831168832\n",
+      "Especificidade: 0.548051948051948 \n",
       "\n",
-      "person_0     0.048009\n",
-      "person_12    0.047827\n",
-      "person_11    0.047645\n",
-      "person_5     0.047281\n",
-      "person_13    0.046918\n",
-      "person_3     0.046736\n",
-      "person_1     0.046190\n",
-      "person_21    0.046190\n",
-      "person_18    0.046008\n",
-      "person_2     0.045827\n",
-      "person_16    0.045463\n",
-      "person_14    0.045281\n",
-      "person_17    0.045099\n",
-      "person_7     0.045099\n",
-      "person_6     0.044917\n",
-      "person_15    0.044554\n",
-      "person_8     0.044554\n",
-      "person_4     0.044372\n",
-      "person_9     0.044008\n",
-      "person_10    0.043281\n",
-      "person_19    0.042553\n",
-      "person_20    0.042189\n",
+      "person_7     0.049273\n",
+      "person_9     0.049091\n",
+      "person_16    0.048727\n",
+      "person_18    0.048000\n",
+      "person_6     0.047091\n",
+      "person_20    0.047091\n",
+      "person_13    0.046545\n",
+      "person_17    0.046364\n",
+      "person_19    0.046182\n",
+      "person_12    0.046000\n",
+      "person_5     0.045636\n",
+      "person_3     0.045636\n",
+      "person_2     0.045273\n",
+      "person_8     0.044727\n",
+      "person_0     0.044545\n",
+      "person_11    0.044182\n",
+      "person_1     0.044000\n",
+      "person_14    0.044000\n",
+      "person_10    0.043636\n",
+      "person_4     0.043091\n",
+      "person_15    0.042727\n",
+      "person_21    0.038182\n",
       "dtype: float64\n"
      ]
     }
@@ -895,45 +871,58 @@
     "| F2 | 1 | pspf1, kurt|\n",
     "| F2 | 2 | pspf1, pspf2|\n",
     "\n",
-    "Abaixo podemos ver uma demonstração."
+    "\n",
+    "Sabemos por trabalhos similares que a classificação utilizando dados de acelerômetro para o problema de predizer pessoas com/sem Parkinson são bem difíceis. Por exemplo, conforme podemos ver aqui https://blog.insightdatascience.com/head-over-heels-detecting-parkinsons-disease-from-accelerometer-data-b36aa46e320b, houve uma dificuldade muito grande em obter bons atributos sendo que muitos deles tinham uma enorme sobreposição de classes.\n",
+    "\n",
+    "Sendo assim, nós tivemos as mesmas dificuldades mesmo que o nosso problema seja um pouco diferente. Em várias de nossas tentativas não foi possível obter resultados satisfatórios.\n",
+    "\n",
+    "A única 'solução' encontrada foi utilizar filtros nas fases/medidas conforme a tabela acima. Contudo, essa proposta não é viável, já que, a utilização da filtagrem acarreta em pouquíssimos dados, não sendo possível validar os modelos.\n",
+    "\n",
+    "É interessante notar, portanto, que segundo nossas análises temos que para cada fase/medida as features se comportam de uma maneira diferente, ou seja, dependendo da situação a distribuição delas no espaço muda. Isso pode ter acontecido pelo fato de que em cada fase nós temos níveis de estresse diferente. A mudança nas medidas pode ter envolvimento com o fator psicológico, já que, na segunda avaliação as pessoas estavam mais preparadas para o discurso. \n",
+    "\n",
+    "Nota-se também o porque da utilização de várias codificações não terem dado certo. Como cada fase/medida possui seu própio conjunto ótimo de features, mesmo que tentassemos realizar uma separação espacial nos dados a mistura de atributos ocasionava confusões no algoritmo.\n",
+    "\n",
+    "Portanto, concluímos que com os dados disponíveis não é possível realizar uma classificação satisfatória. Futuramente, o uso de novas features pode resolver o problema. Caso o contrário, a sugestão seria obter mais dados para que as avaliações fossem mais precisas. \n",
+    "\n",
+    "Mesmo não sendo ideal para validação, abaixo temos uma demo de como são os resultados da classificação utilizando a filtragem."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "AUC: 0.7996698412698413\n",
-      "Score: 0.7870909090909091\n",
-      "Sensibilidade: 0.8097547619047618\n",
-      "Especificidade: 0.7895849206349206 \n",
+      "AUC: 0.7944746031746032\n",
+      "Score: 0.78\n",
+      "Sensibilidade: 0.8007222222222222\n",
+      "Especificidade: 0.7882269841269842 \n",
       "\n",
-      "person_14    0.177626\n",
-      "person_0     0.105038\n",
-      "person_10    0.080273\n",
-      "person_16    0.077711\n",
-      "person_7     0.072588\n",
-      "person_11    0.066610\n",
-      "person_21    0.066610\n",
-      "person_8     0.058924\n",
-      "person_2     0.040137\n",
-      "person_19    0.036721\n",
-      "person_9     0.033305\n",
-      "person_17    0.023057\n",
-      "person_13    0.023057\n",
-      "person_18    0.022203\n",
-      "person_5     0.021349\n",
-      "person_20    0.020495\n",
-      "person_12    0.018787\n",
-      "person_4     0.016225\n",
-      "person_15    0.014518\n",
-      "person_3     0.012810\n",
-      "person_6     0.005978\n",
-      "person_1     0.005978\n",
+      "person_14    0.180992\n",
+      "person_10    0.102479\n",
+      "person_16    0.098347\n",
+      "person_0     0.093388\n",
+      "person_7     0.086777\n",
+      "person_11    0.065289\n",
+      "person_21    0.060331\n",
+      "person_2     0.057851\n",
+      "person_8     0.042975\n",
+      "person_18    0.033058\n",
+      "person_19    0.030579\n",
+      "person_9     0.023967\n",
+      "person_3     0.021488\n",
+      "person_20    0.016529\n",
+      "person_17    0.016529\n",
+      "person_5     0.015702\n",
+      "person_13    0.013223\n",
+      "person_4     0.011570\n",
+      "person_15    0.009917\n",
+      "person_12    0.009091\n",
+      "person_1     0.004959\n",
+      "person_6     0.004959\n",
       "dtype: float64\n"
      ]
     }
@@ -948,6 +937,23 @@
     "\n",
     "#Classificacao\n",
     "evaluate_classifier(X,Y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Conclusão\n",
+    "\n",
+    "- Não foi possível obter bons resultados.\n",
+    "- Causas: Grande aleatoriedade nos dados pelo fato dos diferentes níveis de estresse que as pessoas passavam.\n",
+    "- Possíveis soluções futuras: Descoberta de novos atributos e mais dados.\n",
+    "\n",
+    "## 4. Observações\n",
+    "\n",
+    "Como não foi possível obter resultados satisfatórios com a classificação, certamente o uso de um algoritmo não supervisionado para descrever os dados iria agir de maneira menos precisa, já que, o poder dos algoritmos superviosionados tende a ser maior.\n",
+    "\n",
+    "Assim, não iremos nos ater a criar ou realizar análises de clustering com esses dados."
    ]
   }
  ],
