Devoloped the deploy phase

--- a/AccelerometerAnalysisParkinsonsCannabidiol/Scripts/5-Clustering.ipynb
+++ b/AccelerometerAnalysisParkinsonsCannabidiol/Scripts/5-Clustering.ipynb
@@ -20,11 +20,13 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "import pickle\n",
     "from math import pi\n",
     "\n",
     "from sklearn.cluster import KMeans\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
     "from sklearn.decomposition import PCA\n",
+    "from sklearn.pipeline import Pipeline\n",
     "\n",
     "from scipy.stats import f_oneway\n",
     "\n",
@@ -758,7 +760,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 6. Conclusão\n",
+    "# 6. Deploy\n",
+    "\n",
+    "Vamos criar um modelo que será usado para deploy no dashboard."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Criando uma copia dos dados\n",
+    "df_kmeans = df_parkinson[['pse','psp','pspf']].copy()\n",
+    "df_pca = df_parkinson.copy()\n",
+    "\n",
+    "#Primeiro modelo para agrupamento\n",
+    "model1 = Pipeline([\n",
+    "    ('min_max_scaler', MinMaxScaler()),\n",
+    "    ('clf', KMeans(n_clusters=2,random_state=42))\n",
+    "])\n",
+    "\n",
+    "#Segundo modelo para visualizacao\n",
+    "model2 = Pipeline([\n",
+    "    ('min_max_scaler', MinMaxScaler()),\n",
+    "    ('clf', PCA(n_components=2))\n",
+    "])\n",
+    "\n",
+    "#Treinando modelos\n",
+    "model1.fit(df_kmeans)\n",
+    "model2.fit(df_pca)\n",
+    "\n",
+    "#Salvando modelos\n",
+    "with open('model1.pickle','wb') as f:\n",
+    "    pickle.dump(model1,f)\n",
+    "    \n",
+    "with open('model2.pickle','wb') as f:\n",
+    "    pickle.dump(model2,f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 7. Conclusão\n",
     "\n",
     "Pelas análises nos clusters realizadas verificamos que é possível através do agrupamento criar grupos que sejam úteis para interpretação, de modo que são bem diferentes entre si. Tais clusters podem auxiliar na tomada de decisão ao verificar o efeito que um paciente possui ao utilizar o CBD.\n",
     "\n",
