--- a/Smartphone-Detection/Smartphone-Detection.ipynb
+++ b/Smartphone-Detection/Smartphone-Detection.ipynb
@@ -35,6 +35,10 @@
     "from sklearn.decomposition import TruncatedSVD\n",
     "from sklearn.svm import SVC\n",
     "\n",
+    "# Evaluation\n",
+    "from sklearn.model_selection import cross_val_score, ShuffleSplit\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "\n",
     "# Graphics\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns"
@@ -1993,8 +1997,7 @@
     "not_smart['target'] = 0\n",
     "\n",
     "# Save data\n",
-    "smartphone.to_csv('smartphone.csv',index=False)\n",
-    "not_smart.to_csv('not_smartphone.csv',index=False)"
+    "pd.concat([smartphone,not_smart]).to_csv('smart_or_not.csv',index=False)"
    ]
   },
   {
@@ -2033,8 +2036,7 @@
    "outputs": [],
    "source": [
     "# Reading data\n",
-    "smartphone = pd.read_csv('smartphone.csv')\n",
-    "not_smart = pd.read_csv('not_smartphone.csv')"
+    "smart_or_not = pd.read_csv('smart_or_not.csv')"
    ]
   },
   {
@@ -2054,27 +2056,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Sample\n",
-    "x_smart = smartphone.sample(300,replace=False,random_state=42)\n",
-    "x_not_smart = not_smart.sample(300,replace=False,random_state=42)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Separate dataset\n",
-    "smartphone = smartphone[~smartphone.index.isin(x_smart.index)]\n",
-    "not_smart = not_smart[~not_smart.index.isin(x_not_smart.index)]\n",
+    "# Separate dataset in train and test\n",
+    "X_train = smart_or_not[smart_or_not['target'] == 1].sample(300,replace=False,random_state=42)\n",
+    "X_train = pd.concat([X_train,smart_or_not[smart_or_not['target'] == 0].sample(300,replace=False,random_state=42)])\n",
+    "X_test = smart_or_not[~smart_or_not.index.isin(X_train.index)]\n",
     "\n",
-    "# Training dataset\n",
-    "X = pd.concat([x_smart,x_not_smart],axis=0)\n",
-    "\n",
-    "# Target\n",
-    "y = X['target']\n",
-    "X = X.drop(columns='target')"
+    "# Separate dataset in dependent and independent variables\n",
+    "y_train = X_train['target']\n",
+    "y_test = X_test['target']\n",
+    "X_train = X_train.drop(columns='target')\n",
+    "X_test = X_test.drop(columns='target')"
    ]
   },
   {
@@ -2086,20 +2077,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Training tf-idf\n",
-    "vectorizer = TfidfVectorizer().fit(X['title'])\n",
+    "vectorizer = TfidfVectorizer().fit(X_train['title'])\n",
     "\n",
     "# Transform data\n",
-    "X_tfidf = vectorizer.transform(X['title'])"
+    "X_tfidf = vectorizer.transform(X_train['title'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -2108,7 +2099,7 @@
        "(600, 1343)"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2127,7 +2118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2137,7 +2128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2179,7 +2170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -2209,7 +2200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2226,17 +2217,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Training\n",
-    "svc = SVC(gamma='scale').fit(X_tfidf,y)"
+    "svc = SVC(gamma='scale').fit(X_tfidf,y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -2245,14 +2236,14 @@
        "0.9683333333333334"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Accuracy\n",
-    "svc.score(X_tfidf,y)"
+    "svc.score(X_tfidf,y_train)"
    ]
   },
   {
@@ -2271,6 +2262,121 @@
     "In binary classification we have some trade-off in order to predict correct both classes. So let's evaluate if both of them are predicted correctly.\n",
     "\n",
     "For check this we will use recall and especifity, beyond kfold for evaluate if our classifier really learn."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    1787\n",
+       "1     219\n",
+       "Name: target, dtype: int64"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check samples for each target\n",
+    "y_test.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sample 219 rows \n",
+    "y_tmp = y_test[y_test==0].sample(219,replace=False,random_state=42)\n",
+    "y_tmp = pd.concat([y_tmp,y_test[y_test==1]])\n",
+    "X_test = X_test[X_test.index.isin(y_tmp.index)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Transforming X_test with tf-idf and svd\n",
+    "X_test = svd.transform(vectorizer.transform(X_test['title']))[:,:350]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''\n",
+    "\n",
+    "Computes specificity\n",
+    "\n",
+    "Parameters\n",
+    "----------\n",
+    "estimator: Estimador.\n",
+    "X: Array ou DataFrame com as features.\n",
+    "y: Array com a variável target.\n",
+    "\n",
+    "'''\n",
+    "def specificity(estimator,X,y):\n",
+    "    \n",
+    "    # Fit do modelo\n",
+    "    model = estimator.fit(X,y)\n",
+    "    \n",
+    "    # Matrix de confusao\n",
+    "    tn, fp, fn, tp = confusion_matrix(y,model.predict(X)).ravel()\n",
+    "    \n",
+    "    # Especificidade\n",
+    "    return tn/(tn+fp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Kfold with 4 folds\n",
+    "cv = ShuffleSplit(n_splits=4,test_size=0.4,random_state=42)\n",
+    "\n",
+    "# Evaluation\n",
+    "recall = cross_val_score(svc,X_test,y_tmp,cv=cv,scoring='recall')\n",
+    "specificity = cross_val_score(svc,X_test,y_tmp,cv=cv,scoring=specificity)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Recall: [0.94117647 0.98765432 0.97619048 0.96590909] 0.9677325896688641 0.01715345323471315\n",
+      "Recall: [0.94117647 0.98765432 0.97619048 0.96590909] 0.9612415044909324 0.023384820977597167\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Avaliacao\n",
+    "print('Recall:',recall,np.mean(recall),np.std(recall))\n",
+    "print('Recall:',recall,np.mean(specificity),np.std(specificity))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 5. Deploy"
    ]
   }
  ],
