--- a/Smartphone-Detection/Smartphone-Detection.ipynb
+++ b/Smartphone-Detection/Smartphone-Detection.ipynb
@@ -41,7 +41,11 @@
     "\n",
     "# Graphics\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "\n",
+    "# Deploy\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "import pickle"
    ]
   },
   {
@@ -2288,6 +2292,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Like you can see above we have a problem with unbalanced data for test. Here we have a similar problem because if we use the dataset in this way, it's very likely to result in poor results in kfold (we don't have much data too). \n",
+    "\n",
+    "So we will undersampling our data, doing this our new dataset will have 438 rows (219 from target 0 and 219 from target 1)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 44,
    "metadata": {},
@@ -2348,8 +2361,8 @@
     "cv = ShuffleSplit(n_splits=4,test_size=0.4,random_state=42)\n",
     "\n",
     "# Evaluation\n",
-    "recall = cross_val_score(svc,X_test,y_tmp,cv=cv,scoring='recall')\n",
-    "specificity = cross_val_score(svc,X_test,y_tmp,cv=cv,scoring=specificity)"
+    "rec = cross_val_score(svc,X_test,y_tmp,cv=cv,scoring='recall')\n",
+    "spec = cross_val_score(svc,X_test,y_tmp,cv=cv,scoring=specificity)"
    ]
   },
   {
@@ -2368,15 +2381,124 @@
    ],
    "source": [
     "# Avaliacao\n",
-    "print('Recall:',recall,np.mean(recall),np.std(recall))\n",
-    "print('Recall:',recall,np.mean(specificity),np.std(specificity))"
+    "print('Recall:',rec,np.mean(rec),np.std(rec))\n",
+    "print('Recall:',rec,np.mean(spec),np.std(spec))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 5. Deploy"
+    "Evaluating the SVM for both recall and specificity we can see that the results are very good. We do not have a high variation in the folds indicating that we do not have overfitting and in addition the average values are very high.\n",
+    "\n",
+    "We could try to change the parameters of the SVM to achieve an even better result, but since we have quite satisfactory values we will leave it that way."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 5. Deploy\n",
+    "\n",
+    "Knowing that our classifier has had good results, let's build a pipeline and save the algorithm to be used in production. For this we will use almost the entire dataset."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Objects to use in pipeline\n",
+    "vec = TfidfVectorizer()\n",
+    "svd = TruncatedSVD(n_components=350)\n",
+    "svc = SVC(gamma='scale')\n",
+    "\n",
+    "# Creating pipeline\n",
+    "model = Pipeline([('tf-idf',vec),('svd',svd),('svc',svc)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    2087\n",
+       "1     519\n",
+       "Name: target, dtype: int64"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check unbalanced data\n",
+    "smart_or_not['target'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Undersampling\n",
+    "X = smart_or_not[smart_or_not['target'] == 0].sample(519,replace=False)\n",
+    "X = pd.concat([X,smart_or_not[smart_or_not['target']==1]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Separate variables\n",
+    "y = X['target']\n",
+    "X = X.drop(columns='target')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Pipeline(memory=None,\n",
+       "     steps=[('tf-idf', TfidfVectorizer(analyzer='word', binary=False, decode_error='strict',\n",
+       "        dtype=<class 'numpy.float64'>, encoding='utf-8', input='content',\n",
+       "        lowercase=True, max_df=1.0, max_features=None, min_df=1,\n",
+       "        ngram_range=(1, 1), norm='l2', preprocessor=None, smooth_idf=True...,\n",
+       "  max_iter=-1, probability=False, random_state=None, shrinking=True,\n",
+       "  tol=0.001, verbose=False))])"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Training model\n",
+    "model.fit(X['title'],y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save model\n",
+    "with open('model.pkl','wb') as f:\n",
+    "    pickle.dump(model,f)"
    ]
   }
  ],
